# license-facade-service

./: Dockerfile  LICENSE  README.md  docker-build.sh  docker-compose.yaml  main.py  pyproject.toml
conf/: settings.toml
src/license_facade_service/: main.py
src/license_facade_service/api/v1/: licenses.py  licenses_graph.py  metrics.py
src/license_facade_service/infra/: fuseki_client.py
src/license_facade_service/utils/: commons.py  license_rdf_uploader.py  rdf_transformer.py
